--- a/main.css
+++ b/main.css
@@ -9,8 +9,8 @@ html{
 
 h1{
     border-top-style:dotted;
-    border-top-color: green;
-    border-bottom-color: #33ff00;
+    border-top-color: #800000;
+    border-bottom-color: #4fe729;
     border-bottom-style: dotted;
     border-left-style: outset;
     
